# fake-new-detection

./: .gitignore  main.py  pyproject.toml
models/: logistic_model.joblib  tfidf_vectorized.joblib
src/: data_processor.py  model_trainer.py  setup_assets.py
