[project]
name = "fake-news-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.62.0",
    "matplotlib>=3.10.8",
    "newspaper3k>=0.2.8",
    "nltk>=3.9.2",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "textblob>=0.19.0",
]
